--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@ body {
   .banner {
     width: 100%;
     height: 300px;
-    background-image: url('backgro.png');
+    background-image: url('realistic Afrocentri.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
