--- a/home.html
+++ b/home.html
@@ -208,11 +208,11 @@ body {
       </div>
     </div>
 
-    <!-- Profile Photo -->
-    <div style="flex: 0 0 400px; text-align: center;">
-      <img src="right.jpeg" alt="Chante Johnson in a yellow blazer posing in a professional setting"
-        style="width: 100%; max-width: 360px; border-radius: 50%; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
-    </div>
+<!-- Profile Photo -->
+<div style="flex: 0 0 100%; text-align: center; margin-top: 2rem;">
+  <img src="shareFromBeautyPlus (1).jpg" alt="China standing up posing in home setting."
+    style="width: 100%; max-width: 500px; border-radius: 12px; box-shadow: 0 6px 20px rgba(0,0,0,0.3);">
+</div>
   </div>
 
   <!-- Sparkles (moved outside flex container) -->
