--- a/home.html
+++ b/home.html
@@ -225,9 +225,9 @@ body {
  <hr style="border: none; border-top: 2px solid #D35400; margin: 3rem 0;">
 </section>
 <footer style="text-align: center; padding: 2rem;">
-<img src="logo.png" alt="Chante' logo" style="height: 70px;">
-<p style="font-size: 0.9rem; color: #777;">Made with sparkle and semantic HTML by Chante’ Johnson</p>
-  © 2025 Chante’ Johnson. All rights reserved.  
+<img src="logo.png" alt="chinalogo.png" style="height: 70px;">
+<p style="font-size: 0.9rem; color: #777;">Made with sparkle and semantic HTML by China</p>
+  © 2025 China. All rights reserved.  
   Content on this site may not be reproduced, distributed, or used without written permission.
 </footer>
 <script>
