--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
   font-size: 1.2rem; 
 }
 body {
-  background: linear-gradient(90deg, #FF6F61, #FFEC8B, #F9A602); 
-  color: #333;
+  background: linear-gradient(90deg, #3B1F2B, #8B0000, #FFD700, #006400);
+  color: #f5f5f5;
 } 
 body {
   padding-top: 80px;
