--- a/home.html
+++ b/home.html
@@ -8,10 +8,9 @@
   font-size: 1.2rem; 
 }
 body {
-  background: linear-gradient(90deg, #3B1F2B, #8B0000, #FFD700, #006400);
-  color: #f5f5f5;
-} 
-body {
+  background: linear-gradient(90deg, #FFB700, #FF6F61, #FFEC8B, #00A86B);
+  color: #222;
+}
   padding-top: 80px;
   font-size: 1.50rem; 
   font-family: 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
