--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
   font-size: 1.2rem; 
 }
 body {
-  background: linear-gradient(90deg, #FFB700, #FF6F61, #FFEC8B, #00A86B);
-  color: #222;
+  background: linear-gradient(90deg, #4B0082, #800080, #C71585, #DA70D6);
+  color: #fdf6ff;
 }
   padding-top: 80px;
   font-size: 1.50rem; 
