--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
   font-size: 1.2rem; 
 }
 body {
-  background: linear-gradient(90deg, #4B0082, #800080, #C71585, #DA70D6);
-  color: #fdf6ff;
+  background: linear-gradient(90deg, #8B5E3C, #C19A6B, #E4B169, #F5DEB3);
+  color: #2E1F0F;
 }
   padding-top: 80px;
   font-size: 1.50rem; 
