--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   font-size: 1.2rem; 
 }
 body {
-  background: linear-gradient(90deg, #8B5E3C, #C19A6B, #E4B169, #F5DEB3);
+  background: linear-gradient(90deg, #5C4033, #A67B5B, #D2B48C, #228B22);
   color: #2E1F0F;
 }
   padding-top: 80px;
