--- a/home.html
+++ b/home.html
@@ -191,11 +191,11 @@ body {
 
 <!-- Main Content -->
 <div class="sparkle-container" style="position: relative;">
-  
-<!-- Flex Layout for Bio + Photo -->
-  <div style="display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-start; padding: 3rem 2rem; max-width: 1200px; margin: auto; gap: 2rem;">
- 
-<!-- Bio Text -->
+
+  <!-- Flex Layout for Bio + Photo -->
+  <div style="display: flex; flex-wrap: nowrap; justify-content: space-between; align-items: flex-start; padding: 3rem 2rem; max-width: 1200px; margin: auto; gap: 2rem;">
+
+    <!-- Bio Text -->
     <div style="flex: 1; min-width: 300px;">
       <h1 style="font-size: 2.5rem; color: #880E4F; margin-bottom: 1rem;">Hey, It’s China. Come On In.</h1>
       <div style="font-size: 1.25rem; line-height: 1.8; color: #1a1a1a;">
@@ -203,17 +203,17 @@ body {
         <p>Born in Harlem in the 80s—a time of fire and resilience—I’ve always carried the gift. From the womb, I’ve seen beyond the veil, moved between planes, and listened to the quiet truths most people overlook. That knowing shapes everything I create.</p>
         <p>With degrees in Learning, Design & Technology, Computer Science, and Computer Information Systems, I bring both technical fluency and emotional intelligence to my work. But this site isn’t just about credentials—it’s about connection, story, and spirit.</p>
         <p>Here you’ll find my projects, my poetry, my offerings, and my reflections. Whether you’re seeking a spiritual reading, curious about learning new tech, or just drawn to the energy—welcome. You’re in the right place.</p>
-        
       </div>
     </div>
 
-<!-- Profile Photo -->
-<div style="flex: 0 0 100%; text-align: center; margin-top: 2rem;">
-  <img src="shareFromBeautyPlus (1).jpg" alt="China standing up posing in home setting."
-    style="width: 100%; max-width: 500px; border-radius: 12px; box-shadow: 0 6px 20px rgba(0,0,0,0.3);">
-</div>
-  </div>
+    <!-- Profile Photo -->
+    <div style="flex: 0 0 400px; text-align: center;">
+      <img src="shareFromBeautyPlus (1).jpg" alt="China standing up posing in home setting."
+        style="width: 100%; max-width: 400px; border-radius: 12px; box-shadow: 0 6px 20px rgba(0,0,0,0.3);">
+    </div>
 
+  </div>
+</div>
   <!-- Sparkles (moved outside flex container) -->
   <div class="sparkle" style="top: 20px; left: 40px;"></div>
   <div class="sparkle" style="top: 100px; left: 120px;"></div>
